fixed colors for dark mode

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -799,9 +799,9 @@ lite-youtube.lyt-activated > .lty-playbtn {
     --color-text-sec: #a9a9a9;
     --color-code: #333;
     --color-gray: #333;
-    --color-link: #C70404;
+    --color-link: #de1a1a;
     --color-hover: #d4d4d4;
-    --color-visited: #EB0909;
+    --color-visited: #ee1616;
     --color-mark: #b63535;
   }
 
